--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.scss
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.scss
@@ -24,6 +24,8 @@
 
 
     #dashboard-title {
+        display: flex;
+        flex-direction: row;
         margin-bottom: 3%;
         p { padding-top: 0.5%; }
         flex-grow: 1;
