--- a/angular-front/src/app/pages/course-dashboard/course-dashboard.component.html
+++ b/angular-front/src/app/pages/course-dashboard/course-dashboard.component.html
@@ -1,5 +1,6 @@
 <app-dashboard
     *ngIf="getDashboardText() as dbText"
+    [icon]="dbText.icon"
     [title]="dbText.title"
     [description]="dbText.description"
     [createDataTitle]="dbText.createDataTitle"
