--- a/angular-front/src/app/pages/course-detail/course-detail.component.scss
+++ b/angular-front/src/app/pages/course-detail/course-detail.component.scss
@@ -33,7 +33,7 @@ h1 {
 
     .icon {
         transform: scale(2.5);
-        margin-left: 1rem;
+        margin-left: 0.5rem;
         margin-bottom: 0.75rem;
     }
 
@@ -58,8 +58,7 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: nowrap;
-    width: 100%;
+    flex-wrap: wrap;
     flex-grow: 1;
     row-gap: 1rem;
 
@@ -67,7 +66,6 @@ h1 {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        width: 100%;
         flex-grow: 1;
         row-gap: 1rem;
         
@@ -77,7 +75,6 @@ h1 {
             justify-content: flex-start;
             align-items: flex-start;
             flex-grow: 1;
-            margin: 0 1rem 1rem 0 ;
     
             #course-bottom-center-data {
                 display: flex;
@@ -119,10 +116,29 @@ h1 {
         flex-direction: column;
         justify-content: space-around;
         align-items: flex-start;
-        margin: 0 0 1rem 1rem ;
+        margin: 0 0 1rem;
+        padding-bottom: 0;
 
         .students {
             width: 100%;
         }
+
+        #course-students-header {
+            margin-bottom: 0.5rem;
+        }
+
+        #students-see-more {
+            border-top-left-radius: 0; border-top-right-radius: 0;
+            width: calc(100% + 2rem);
+            margin-left: -1.00rem;
+        }
     }
+}
+
+#course-detail-right {
+    margin: 0 0 1rem 1rem ;
+}
+
+#course-plots {
+    min-height: 250px;
 }
