--- a/angular-front/src/app/components/layout/table/table.component.scss
+++ b/angular-front/src/app/components/layout/table/table.component.scss
@@ -15,6 +15,10 @@
         }
     
         tbody { --bs-table-bg: colors.$LIGHT_COLOR }
+
+        #table-actions-td {
+            width: 150px;
+        }
     }
     
     .mat-paginator-container {
