--- a/angular-front/src/app/pages/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail.component.html
@@ -1,5 +1,4 @@
-<div id="course-detail">
-
+<div id="course-detail" class="layout-child">
     <div id="data-blocks" class="custom-co">
         <ng-container *ngFor="let blockInfo of [
             {title: 'Créditos', icon: 'school', value: course?.credits, customBackground: 'linear-main'},
@@ -17,7 +16,7 @@
         </ng-container>
     </div>
     <div id="course-bottom-data" class="row">
-        <div id="course-bottom-center-data" class="col-md-6">
+        <div id="course-bottom-center-data" class="col-lg-6">
             <app-section-header
                 id="course-header"
                 class = "custom-container"
@@ -50,7 +49,7 @@
             </section>
         </div>
 
-        <aside id="course-detail-right" class="col-md-4">
+        <aside id="course-detail-right" class="col-lg-4">
             <section id="course-students-data" class="custom-container">
                 <app-section-header
                     id="course-students-header"
