--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -1,11 +1,6 @@
 <div id="course-detail" class="layout-child">
     <div id="data-blocks" class="custom-co">
-        <ng-container *ngFor="let blockInfo of [
-            {title: 'Créditos', icon: 'school', value: course?.credits, customBackground: 'linear-main'},
-            {title: 'Profesor del Curso', icon: 'person', value: course?.teacher, customBackground: 'linear-main'},
-            {title: 'Nota promedio', icon: 'star', value: course?.averageGrade, customBackground: 'linear-main'},
-            {title: 'Total de Estudiantes', icon: 'people', value: course?.studentsId?.length, customBackground: 'linear-main'},
-        ]">
+        <ng-container *ngFor="let blockInfo of cardsData">
             <div class="data-block" [appCustomBackground]="'linear-main'">
                     <h1 [appFontSize]="'medium'">{{blockInfo.title}}</h1>
                     <div class="card-info">
@@ -20,18 +15,18 @@
             <app-section-header
                 id="course-header"
                 class = "custom-container"
-                [title]="course?.name || ''"
-                [description]="course?.description || ''"
-                [icon]="course?.icon || ''"
+                [title]="mainSectionData.title"
+                [description]="mainSectionData.description"
+                [icon]="mainSectionData.icon"
                 [customBackground]="'linear-main'"
             >
             </app-section-header>
             <section id="course-plots" class="custom-container">
                 <app-section-header
                     id="course-plots-header"
-                    [title]="'Estadísticas'"
-                    [description]="'Estadísticas de los estudiantes'"
-                    [icon]="'equalizer'"
+                    [title]="chartSectionData.title"
+                    [description]="chartSectionData.description"
+                    [icon]="chartSectionData.icon"
                     [customBackground]="'linear-main'"
                 >
                 </app-section-header>
@@ -53,21 +48,20 @@
             <section id="course-students-data" class="custom-container">
                 <app-section-header
                     id="course-students-header"
-                    [title]="'Estudiantes'"
-                    [description]="'Estudiantes del curso'"
-                    [icon]="'people'"
+                    [title]="enrollmentSectionData.title"
+                    [description]="enrollmentSectionData.description"
+                    [icon]="enrollmentSectionData.icon"
                     [customBackground]="'linear-main'"
                 >
                 </app-section-header>
                 <div class="students">
-                    <ng-container *ngFor="let student of courseStudents.slice(0,4)">
+                    <ng-container *ngFor="let data of enrollmentData.slice(0,4)">
                         <app-card
-                            [title]="student | fullName"
-                            [description]="student.email"
-                            [pictureUrl]="student.pictureUrl"
+                            [title]="data.title"
+                            [description]="data.description"
+                            [pictureUrl]="data.pictureUrl"
                             [pictureHeight]="80"
-                            [pictureAlt]="student.name"
-                            [footerText]="student.email"
+                            [pictureAlt]="data.title"
                         >
                     </app-card>
                 </ng-container>
@@ -81,9 +75,9 @@
             <div class="custom-container">
                 <app-section-header
                     id="course-students-header"
-                    [title]="'Carreras'"
-                    [description]="'Distribución de estudiantes por carrera'"
-                    [icon]="'donut_small'"
+                    [title]="doughnutSectionData.title"
+                    [description]="doughnutSectionData.description"
+                    [icon]="doughnutSectionData.icon"
                     [customBackground]="'linear-main'"
                 >
                 </app-section-header>
