services logic extracted from detail component and course detail using it

--- a/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
@@ -1,4 +1,5 @@
 <app-detail
+    *ngIf="id && course"
     [cardsData]="getCardsData(course)"
     [mainSectionData]="getMainSectionData(course)"
     [chartSectionData]="getChartSectionData(course)"
