--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -33,8 +33,8 @@
                 <div id="plots">
                     <div class="chart-wrapper">
                         <canvas baseChart 
-                            [datasets]="lineChartData" 
-                            [labels]="lineChartLabels" 
+                            [datasets]="[{data: chartData.datasets, label: chartData.label}]" 
+                            [labels]="chartData.datasetLabels" 
                             [options]="lineChartOptions"
                             [legend]="lineChartLegend" 
                         >
@@ -55,7 +55,7 @@
                 >
                 </app-section-header>
                 <div class="students">
-                    <ng-container *ngFor="let data of enrollmentData.slice(0,4)">
+                    <ng-container *ngFor="let data of enrollmentData.slice(0,maxEnrollmentsShown)">
                         <app-card
                             [title]="data.title"
                             [description]="data.description"
@@ -65,7 +65,7 @@
                         >
                     </app-card>
                 </ng-container>
-                <button id="students-see-more" [appCustomBackground]="'linear-main'" mat-raised-button routerLink="/course/{{course?.id}}/students" color="primary">
+                <button id="students-see-more" [appCustomBackground]="'linear-main'" mat-raised-button color="primary">
                     <mat-icon>keyboard_arrow_right</mat-icon>
                     Ver más
                 </button>
@@ -82,7 +82,7 @@
                 >
                 </app-section-header>
                 <canvas baseChart class="chart"
-                    [data]="doughnutChartData"
+                    [data]="{datasets: [{data: doughnutData.datasets}], labels: doughnutData.datasetLabels}"
                     [type]="doughnutChartType"
                     [options]="doughnutChartOptions"
                 >
