--- a/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
@@ -9,6 +9,7 @@
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
     [doughnutSectionData]="getDoughnutSectionData(course)"
     [doughnutData]="getDoughnutData(course)"
+    [appStyle]="'linear-main'"
 
 ></app-detail>
 
