--- a/angular-front/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/angular-front/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -6,5 +6,6 @@
     [createDataTitle]="dbText.createDataTitle"
     [filterableType]="dbText.filterableType"
     [filterOptions]="dbText.filterOptions"
+    (onViewEmitter)="onViewEmitter($event)"
 >
 </app-dashboard>
