--- a/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
+++ b/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
@@ -1,1 +1,13 @@
-<p>student-detail works!</p>
+<app-detail
+    *ngIf="id && student"
+    [cardsData]="getCardsData(student)"
+    [mainSectionData]="getMainSectionData(student)"
+    [chartSectionData]="getChartSectionData(student)"
+    [chartData]="getChartData(student)"
+    [enrollmentSectionData]="getEnrollmentSectionData(student)"
+    [enrollmentData]="getEnrollmentData(student)"
+    [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
+    [doughnutSectionData]="getDoughnutSectionData(student)"
+    [doughnutData]="getDoughnutData(student)"
+    [appStyle]="'linear-green'"
+></app-detail>
