--- a/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
+++ b/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
@@ -10,4 +10,5 @@
     [doughnutSectionData]="getDoughnutSectionData(student)"
     [doughnutData]="getDoughnutData(student)"
     [appStyle]="'linear-green'"
+    [secondaryAppStyle]="'linear-main'"
 ></app-detail>
