--- a/angular-front/src/app/components/global/card/card/card.component.scss
+++ b/angular-front/src/app/components/global/card/card/card.component.scss
@@ -41,3 +41,12 @@
     font-size: 0.8rem;
     margin: 0;
 }
+
+.icon-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    margin:  0 -140px 12px 10px;
+}
