navigation connected to right side enrollments in detail page

--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -58,6 +58,7 @@
                 <div class="students">
                     <ng-container *ngFor="let data of enrollmentData.slice(0,maxEnrollmentsShown)">
                         <app-card
+                            (click)="enrollmentSeeMoreAction(data.id)"
                             [title]="data.title"
                             [description]="data.description"
                             [pictureUrl]="data.pictureUrl"
@@ -68,7 +69,11 @@
                         >
                     </app-card>
                 </ng-container>
-                <button id="students-see-more" [appCustomBackground]="appStyle" mat-raised-button color="primary">
+                <button 
+                    id="students-see-more" 
+                    [appCustomBackground]="appStyle" 
+                    mat-raised-button color="primary"
+                >
                     <mat-icon>keyboard_arrow_right</mat-icon>
                     Ver más
                 </button>
