--- a/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
+++ b/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
@@ -9,6 +9,6 @@
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
     [doughnutSectionData]="getDoughnutSectionData(student)"
     [doughnutData]="getDoughnutData(student)"
-    [appStyle]="'linear-green'"
-    [secondaryAppStyle]="'linear-main'"
+    [appStyle]="'linear-main'"
+    [secondaryAppStyle]="'linear-green'"
 ></app-detail>
