custom color to detail chart

--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -34,7 +34,7 @@
                 <div id="plots">
                     <div class="chart-wrapper">
                         <canvas baseChart 
-                            [datasets]="[{data: chartData.datasets, label: chartData.label}]" 
+                            [datasets]="[{data: chartData.datasets, label: chartData.label, backgroundColor: chartData.backgroundColor}]"
                             [labels]="chartData.datasetLabels" 
                             [options]="lineChartOptions"
                             [legend]="lineChartLegend" 
