bugfix - route context consistency errors (students in courses table)

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <div id="dashboard-title" class="custom-container d-flex justify-content-between align-items-end">
             <app-section-header [icon]="icon" [title]="title" [description]="description"></app-section-header>
             <p id="add-filterable-data-btn-text" [appFontSize]="'medium'" class="text-end">
-                <button mat-raised-button id="add-filterable-data-btn" (click)="openDialog()">
+                <button mat-raised-button id="add-filterable-data-btn" (click)="handleOpenEditDialog('create')">
                     <mat-icon [appFontSize]="'medium'" class="mr-2">add</mat-icon>
                     {{createDataTitle}}
                 </button>
@@ -13,7 +13,11 @@
             <div class="mb-4">
                 <app-filters [filterableType]="filterableType" [filters]="filterOptions"></app-filters>
             </div>
-            <app-table (onViewEmiter)="handleViewEmitter($event)"></app-table>
+            <app-table 
+                [openDeleteDialog]="openDeleteDialog" 
+                [openEditDialog]="openEditDialog"
+                (onViewEmiter)="handleViewEmitter($event)">
+            </app-table>
         </div>
     </section>
 </div>
