--- a/angular-front/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/angular-front/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -6,6 +6,8 @@
     [createDataTitle]="dbText.createDataTitle"
     [filterableType]="dbText.filterableType"
     [filterOptions]="dbText.filterOptions"
+    [openEditDialog]="openEditDialog"
+    [openDeleteDialog]="openDeleteDialog"
     (onViewEmitter)="onViewEmitter($event)"
 >
 </app-dashboard>
