--- a/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
@@ -6,6 +6,7 @@
     [chartData]="getChartData(course)"
     [enrollmentSectionData]="getEnrollmentSectionData(course)"
     [enrollmentData]="getEnrollmentData(course)"
+    [enrollmentSeeDetailAction]="getEnrollmentSeeDetailAction()"
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
     [doughnutSectionData]="getDoughnutSectionData(course)"
     [doughnutData]="getDoughnutData(course)"
