--- a/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
+++ b/angular-front/src/app/pages/student-detail/student-detail/student-detail.component.html
@@ -7,6 +7,7 @@
     [enrollmentSectionData]="getEnrollmentSectionData(student)"
     [enrollmentData]="getEnrollmentData(student)"
     [enrollmentSeeMoreAction]="getEnrollmentSeeMoreAction()"
+    [enrollmentSeeDetailAction]="getEnrollmentSeeDetailAction()"
     [doughnutSectionData]="getDoughnutSectionData(student)"
     [doughnutData]="getDoughnutData(student)"
     [appStyle]="'linear-main'"
