bugfix login route not showing and signup function not updating user

--- a/angular-front/src/app/components/global/toolbar/toolbar.component.html
+++ b/angular-front/src/app/components/global/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <nav id="toolbar" class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <app-icon [size]="30"></app-icon>
       <h1 [appFontSize]="'medium'">{{"\<Spanford University />"}}</h1>
     </a>
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a [appFontSize]="'medium'" class="nav-link" href="#">Novedades</a>
+          <a [appFontSize]="'medium'" class="nav-link">Novedades</a>
         </li>
         <li class="nav-item">
-          <a [appFontSize]="'medium'" class="nav-link active" href="#">Estadísticas</a>
+          <a [appFontSize]="'medium'" class="nav-link active">Estadísticas</a>
         </li>
         <li class="nav-item">
-          <a [appFontSize]="'medium'" class="nav-link" href="#">Contacto</a>
+          <a [appFontSize]="'medium'" class="nav-link">Contacto</a>
         </li>
       </ul>
       <div class="d-flex">
