--- a/angular-front/src/app/pages/auth/auth.component.html
+++ b/angular-front/src/app/pages/auth/auth.component.html
@@ -52,7 +52,7 @@
             </div>
         </form>
         <p [appFontSize]="'medium'" *ngIf="hasAccount" class="login-forgot-password-text">
-            <a href="#">¿Olvidaste tu contraseña?</a>
+            <a>¿Olvidaste tu contraseña?</a>
         </p>
         <button id="login-button" type="submit" form="login-form">
             {{hasAccount? 'Iniciar sesión' : 'Regístrate' }}
@@ -65,7 +65,7 @@
         </div>
         <p [appFontSize]="'medium'" class="login-register-text">
             {{hasAccount? '¿No tienes una cuenta?' : '¿Ya tienes cuenta?'}}
-            <a (click)="changeAuthMode()" href="#">{{hasAccount? 'Regístrate' : 'Inicia sesión'}}</a>
+            <a (click)="changeAuthMode()">{{hasAccount? 'Regístrate' : 'Inicia sesión'}}</a>
         </p>
     </section>
     <div *ngIf="form.invalid && submitted">
