classes services and design

--- a/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
+++ b/angular-front/src/app/pages/course-detail/course-detail/course-detail.component.html
@@ -4,6 +4,8 @@
     [mainSectionData]="getMainSectionData(course)"
     [chartSectionData]="getChartSectionData(course)"
     [chartData]="getChartData(course)"
+    [classesSectionData]="getClassesSectionData(course)"
+    [classesData]="getClassesData(course)"
     [enrollmentSectionData]="getEnrollmentSectionData(course)"
     [enrollmentData]="getEnrollmentData(course)"
     [enrollmentSeeDetailAction]="getEnrollmentSeeDetailAction()"
