--- a/angular-front/src/app/pages/detail/detail.component.html
+++ b/angular-front/src/app/pages/detail/detail.component.html
@@ -57,7 +57,7 @@
                     (click)="addAction()"
                     [appCustomBackground]="appStyle" 
                     mat-raised-button color="primary"
-                    class="mb-3"
+                    class="my-3"
                 >
                     <mat-icon>add</mat-icon>
                     Agregar clase
